@@ -301,6 +301,7 @@ class OMVRpcServiceFtp extends OMVRpcServiceAbstract {
 			  "properties":{
 				  "uuid":{'.$GLOBALS['OMV_JSONSCHEMA_UUID_UNDEFINED'].'},
 				  "sharedfolderref":{'.$GLOBALS['OMV_JSONSCHEMA_UUID'].'},
+				  "extraoptions":{"type":"string"},
 				  "comment":{"type":"string"}
 			  }
 		  }');
@@ -309,6 +310,7 @@ class OMVRpcServiceFtp extends OMVRpcServiceAbstract {
 			"uuid" => ($params['uuid'] == $GLOBALS['OMV_UUID_UNDEFINED']) ?
 			  OMVUtil::uuid() : $params['uuid'],
 			"sharedfolderref" => $params['sharedfolderref'],
+			"extraoptions" => $params['extraoptions'],
 			"comment" => $params['comment']
 		);
 		// Set the configuration object.
