@@ -2,6 +2,7 @@ openmediavault (1.0.29) stable; urgency=low
 
   * Mantis 0000876: Daily mdadm cron job exited with return code 1.
   * Mantis 0001135: Anacron mdadm Notifications Emails.
+  * Mantis 0001145: Proftpd: Ability to add directives into shares.
   * Mantis 0001146: Dashboard: Use file system label on status widget.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Fri, 10 Oct 2014 08:27:47 +0200
